# learning-rollbar-python

./: .gitignore  LICENSE  README.md
app/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  settings.yaml
app/src/: __init__.py  config.py  environment.py  main.py  menu.py  rollbar.py  utils.py
app/src/scenarios/: __init__.py  base.py  business_events.py  custom_data.py  error_levels.py  exception_types.py  exception_vs_message.py  multiple_errors.py  person_tracking.py  searchable_fields.py
docs/: code-walkthrough.md  configuration.md  customization.md  development.md  installation.md  rollbar-setup.md  scenarios-guide.md  troubleshooting.md
