[project]
name = "rollbar_notificator"
version = "0.1.0"
description = ""
authors = [{ name = "Fredrik Pasanen", email = "fredrikpasanen@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rollbar (>=1.3.0,<2.0.0)",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "msgspec (>=0.19.0,<0.20.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[dependency-groups]
dev = ["mypy (>=1.18.2,<2.0.0)", "ruff (>=0.14.6,<0.15.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Pydantic plugin (critical for Pydantic v2 support)
plugins = ["pydantic.mypy"]

# Output options
show_error_context = true
color_output = true

# Per-module options for third-party packages without type hints
[[tool.mypy.overrides]]
module = "rollbar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true


[tool.pydantic-mypy]
# Pydantic plugin configuration
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.ruff]
# Target Python 3.13
target-version = "py313"

# Same as Black's default line length
line-length = 88

# Assume code is in src directory
src = ["src"]

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules + additional useful ones
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize Python syntax)
    "B",   # flake8-bugbear (find likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (optimize type imports)
    "RUF", # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501", # Line too long (handled by formatter)
    "E741", # Ambiguous variable name
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in __init__.py files
"__init__.py" = ["F401"] # Allow unused imports

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["src"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
# Use double quotes (default, matches current style)
quote-style = "double"

# Use spaces for indentation (default)
indent-style = "space"

# Respect magic trailing comma (like black)
skip-magic-trailing-comma = false

# Automatically detect line endings
line-ending = "auto"

# Format docstrings (like black with --preview)
docstring-code-format = true
docstring-code-line-length = 88
